# G42-200

./: CHANGELOG.md  CMakeLists.txt  README.md
Manual/: G42-200 Starliner Handbook.docx
Manuals/: G42-200 Starliner Handbook.docx
Orbiter/Config/Vessels/: G42-200_Starliner.cfg
Orbiter/Meshes/G422/: G422_dvc.msh  G422_dvc_L.msh  G422_ext.msh
Orbiter/Scenarios/G42-200 Starliner/: 1 - Launch to ISS.scn  2 - In orbit.scn  3 - Docked with ISS.scn  Description.txt  Habana spaceport at sunset.scn
Orbiter/Textures/G422/: EXT_a1.dds  EXT_a3.dds  ThrFX.dds  VC_p1.dds  VC_p5.dds  exhaust_oms.dds  exhaust_oxy.dds  exhaust_ramx.dds
Sources/: G422.sln
Sources/Config/Vessels/: G42-200_Starliner.cfg
Sources/G422/: G422.sln  G422.vcxproj  G422.vcxproj.filters
Sources/G422/Header/: G422.h  G422_DVC.h  G422_MDL_DVC.h  G422_MDL_EXT.h  resource.h
Sources/G422/Headers/: G422.h
Sources/G422/Resource/: G422.rc
Sources/G422/Resources/: G422.rc
Sources/G422/Source/: G422_ANIMATIONS.cpp  G422_AUX.cpp  G422_DVC_DISPLAYS.cpp  G422_DVC_SETUP.cpp  G422_ENG_APUSYS.cpp  G422_ENG_OMS.cpp  G422_ENG_RAMCASTER.cpp  G422_ENG_RCS.cpp  G422_ENG_RT66.cpp  G422_OAPI.cpp  G422_SCENARIO_RW.cpp  G422_SIM_CONTROLS.cpp  G422_SIM_DYNAMICS.cpp  G422_SYS_SIM_CUES.cpp  G422_VSL_SETUP.cpp  G422_VSL_UPDATE.cpp
Sources/G422/Sources/: G422_ANIMATIONS.cpp  G422_AUX.cpp  G422_DVC_DISPLAYS.cpp  G422_DVC_SETUP.cpp  G422_ENG_APUSYS.cpp  G422_ENG_OMS.cpp  G422_ENG_RAMCASTER.cpp  G422_ENG_RCS.cpp  G422_ENG_RT66.cpp  G422_OAPI.cpp  G422_SCENARIO_RW.cpp  G422_SIM_CONTROLS.cpp  G422_SIM_DYNAMICS.cpp  G422_VSL_SETUP.cpp  G422_VSL_UPDATE.cpp
Sources/Meshes/: G42-200_ext.max  MFDs.txt  desktop.ini
Sources/Meshes/G422/: G422_dvc.msh  G422_dvc_R.msh  G422_ext.msh
Sources/Textures/: EXT_a1.psd  EXT_a2.psd  MS_ADI.psd  ThrFX.psd  VC_EICAS.psd  VC_MFDKeys.psd  exhaust_main.psd  exhaust_oms.psd  exhaust_oxy.psd  exhaust_ramx.psd
Sources/Textures/G422/: EXT_a2.dds  EXT_a4.dds  MS_ADI.dds  VC_EICAS.dds  (+6 more)
Tools/: GetVectorTool.ms  OrbiterMesh.ms
